--- a/templates/react-mst-universal/templates/src/web/components/newComponentDefault-nornj/NewComponent.t.html
+++ b/templates/react-mst-universal/templates/src/web/components/newComponentDefault-nornj/NewComponent.t.html
@@ -1,7 +1,7 @@
 <template name="#{componentName}#">
   <div class={styles.#{componentName}#} {onClick}>
     <#if {editing}>
-      <ant-Input value={inputValue} {onChange} {onBlur} ref="input" />
+      <ant-Input #mobx-model={inputValue} {onBlur} ref="input" />
       <#else>{textValue}</#else>
     </#if>
   </div>
