--- a/templates/react-mst-universal/templates/src/web/pages/newPageDefault-nornj/newPage.t.html
+++ b/templates/react-mst-universal/templates/src/web/pages/newPageDefault-nornj/newPage.t.html
@@ -3,7 +3,7 @@
     <h2>角色管理 #{pageName}#</h2>
     <div class="{styles.handlerBox}">
       <span class="{styles.lable}">角色名称</span>
-      <ant-input class="{styles.input}" :#mobx-model="inputRole" />
+      <ant-input class="{styles.input}" :#mobx-bind="inputRole" />
       <ant-Button class="btn" onClick={onSearch}>查询</ant-Button>
       <ant-Button class="btn" onClick={onAddRole}>新增</ant-Button>
       <ant-Button class="btn" onClick={onDeleteRole}>删除</ant-Button>
