--- a/templates/react-mst-universal/templates/src/web/pages/newPageForm-nornj/newPage.t.html
+++ b/templates/react-mst-universal/templates/src/web/pages/newPageForm-nornj/newPage.t.html
@@ -15,19 +15,19 @@
     <h2>Ant Design 表单控件示例</h2>
     <div>
       <div class="{styles.formEls}">
-        <ant-Input :#mobx-model="inputValue" />
+        <ant-Input :#mobx-bind="inputValue" />
         <div>
           inputValue：<i style="color:purple;">{inputValue}</i>
         </div>
       </div>
       <div class="{styles.formEls}">
-        <ant-Input.TextArea :#mobx-model="textareaValue" />
+        <ant-Input.TextArea :#mobx-bind="textareaValue" />
         <div>
           textareaValue：<i style="color:purple;">{textareaValue}</i>
         </div>
       </div>
       <div class="{styles.formEls}">
-        <ant-Select :#mobx-model="selectValue" style="width:100%;" placeholder="请选择">
+        <ant-Select :#mobx-bind="selectValue" style="width:100%;" placeholder="请选择">
           <ant-Option value="1">测试数据1</ant-Option>
           <ant-Option value="2">测试数据2</ant-Option>
           <ant-Option value="3">测试数据3</ant-Option>
@@ -37,7 +37,7 @@
         </div>
       </div>
       <div class="{styles.formEls}">
-        <ant-Checkbox.Group :#mobx-model="checkboxValue">
+        <ant-Checkbox.Group :#mobx-bind="checkboxValue">
           <ant-Checkbox value="1">Option A</ant-Checkbox>
           <ant-Checkbox value="2">Option B</ant-Checkbox>
           <ant-Checkbox value="3">Option C</ant-Checkbox>
