Update react-mst template

--- a/templates/react-mst/index.template-web.nj.html
+++ b/templates/react-mst/index.template-web.nj.html
@@ -1,4 +1,4 @@
-<#with {{ htmlWebpackPlugin.options }}>
+<with {{ htmlWebpackPlugin.options }}>
   <!DOCTYPE html>
   <html>
     <head>
@@ -17,4 +17,4 @@
       <script src="{{ path }}js/babelHelpers.min.js"></script>
     </body>
   </html>
-</#with>
+</with>
