--- a/templates/react-mst/src/assets/app.less
+++ b/templates/react-mst/src/assets/app.less
@@ -69,7 +69,7 @@ table {
 
 body {
   color: #333;
-  background: #f4f5f8;
+  background-color: #f4f5f8;
   -webkit-appearance: none;
   -webkit-font-smoothing: auto;
   font-size: 14px;
