Remove style-jsx

--- a/templates/react-mst-app/src/app/css/app.less
+++ b/templates/react-mst-app/src/app/css/app.less
@@ -134,11 +134,11 @@ body {
 }
 
 #app {
-  padding-top: $headerHeight;
+  padding-top: @headerHeight;
 }
 
 #appHome {
-  padding-top: $headerHeight;
+  padding-top: @headerHeight;
 }
 
 :global {
