--- a/templates/react-mst-app/src/app/css/mixins.less
+++ b/templates/react-mst-app/src/app/css/mixins.less
@@ -1,10 +1,10 @@
-@mixin text-ellipsis {
+.text-ellipsis {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
-@mixin ellipsis {
+.ellipsis {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
