--- a/templates/react-mst-app/src/app/pages/chartExample/chartExample.m.less
+++ b/templates/react-mst-app/src/app/pages/chartExample/chartExample.m.less
@@ -5,7 +5,7 @@
 
   .field {
     color: #999;
-    @include ellipsis;
+    .ellipsis;
   }
 
   .num {
@@ -13,7 +13,7 @@
     font-weight: bold;
     text-align: center;
     padding: 10px 0;
-    @include ellipsis;
+    .ellipsis;
   }
 
   .rates {
